C Basics Assignments/Home_work1/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
19:18:21 **** Rebuild of configuration Debug for project Home_work1_EX1 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
..\main.c:10:6: warning: return type of 'main' is not 'int' [-Wmain]
 void main()
      ^~~~
gcc -o Home_work1_EX1.exe main.o 
Info: Nothing to build for Home_work1_EX1
19:24:00 **** Rebuild of configuration Debug for project EX2 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\EX2.o" "..\\src\\EX2.c" 
..\src\EX2.c:12:6: warning: return type of 'main' is not 'int' [-Wmain]
 void main()
      ^~~~
gcc -o EX2.exe "src\\EX2.o" 
19:24:00 **** Incremental Build of configuration Debug for project Home_work1_EX1 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
..\main.c:11:6: warning: return type of 'main' is not 'int' [-Wmain]
 void main()
      ^~~~
gcc -o Home_work1_EX1.exe main.o 
Info: Nothing to build for EX2
19:24:20 **** Incremental Build of configuration Debug for project EX2 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\EX2.o" "..\\src\\EX2.c" 
..\src\EX2.c:12:6: warning: return type of 'main' is not 'int' [-Wmain]
 void main()
      ^~~~
gcc -o EX2.exe "src\\EX2.o" 
Info: Nothing to build for Home_work1_EX1
Info: Nothing to build for EX2
19:28:07 **** Incremental Build of configuration Debug for project EX2 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\EX2.o" "..\\src\\EX2.c" 
..\src\EX2.c:12:6: warning: return type of 'main' is not 'int' [-Wmain]
 void main()
      ^~~~
gcc -o EX2.exe "src\\EX2.o" 
19:28:08 **** Rebuild of configuration Debug for project EX3 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
..\main.c:13:6: warning: return type of 'main' is not 'int' [-Wmain]
 void main()
      ^~~~
gcc -o EX3.exe main.o 
Info: Nothing to build for Home_work1_EX1
Info: Nothing to build for EX3
Info: Nothing to build for EX2
Info: Nothing to build for EX3
19:30:22 **** Rebuild of configuration Debug for project EX_4 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
..\main.c:12:6: warning: return type of 'main' is not 'int' [-Wmain]
 void main()
      ^~~~
gcc -o EX_4.exe main.o 
Info: Nothing to build for Home_work1_EX1
Info: Nothing to build for EX_4
Info: Nothing to build for EX2
Info: Nothing to build for EX3
19:30:46 **** Incremental Build of configuration Debug for project EX_4 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
..\main.c:12:6: warning: return type of 'main' is not 'int' [-Wmain]
 void main()
      ^~~~
gcc -o EX_4.exe main.o 
Info: Nothing to build for Home_work1_EX1
Info: Nothing to build for EX_4
19:34:54 **** Rebuild of configuration Debug for project EX_1 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
..\main.c:11:6: warning: return type of 'main' is not 'int' [-Wmain]
 void main()
      ^~~~
gcc -o EX_1.exe main.o 
19:34:55 **** Rebuild of configuration Debug for project EX_2 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\EX2.o" "..\\src\\EX2.c" 
..\src\EX2.c:12:6: warning: return type of 'main' is not 'int' [-Wmain]
 void main()
      ^~~~
gcc -o EX_2.exe "src\\EX2.o" 
19:34:55 **** Rebuild of configuration Debug for project EX_3 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
..\main.c:13:6: warning: return type of 'main' is not 'int' [-Wmain]
 void main()
      ^~~~
gcc -o EX_3.exe main.o 
Info: Nothing to build for EX_4
19:34:56 **** Rebuild of configuration Debug for project EX_5 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
..\main.c:12:6: warning: return type of 'main' is not 'int' [-Wmain]
 void main()
      ^~~~
gcc -o EX_5.exe main.o 
Info: Nothing to build for EX_5
Info: Nothing to build for EX_1
Info: Nothing to build for EX_2
Info: Nothing to build for EX_3
Info: Nothing to build for EX_4
Info: Nothing to build for EX_5
19:38:57 **** Rebuild of configuration Debug for project EX_6 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
..\main.c:12:6: warning: return type of 'main' is not 'int' [-Wmain]
 void main()
      ^~~~
gcc -o EX_6.exe main.o 
Info: Nothing to build for EX_6
Info: Nothing to build for EX_1
Info: Nothing to build for EX_2
Info: Nothing to build for EX_3
Info: Nothing to build for EX_4
Info: Nothing to build for EX_5
19:39:54 **** Incremental Build of configuration Debug for project EX_6 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
..\main.c:12:6: warning: return type of 'main' is not 'int' [-Wmain]
 void main()
      ^~~~
gcc -o EX_6.exe main.o 
Info: Nothing to build for EX_6
Info: Nothing to build for EX_1
Info: Nothing to build for EX_2
Info: Nothing to build for EX_3
Info: Nothing to build for EX_4
Info: Nothing to build for EX_5
19:40:08 **** Incremental Build of configuration Debug for project EX_6 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
..\main.c:12:6: warning: return type of 'main' is not 'int' [-Wmain]
 void main()
      ^~~~
gcc -o EX_6.exe main.o 
Info: Nothing to build for EX_6
Info: Nothing to build for EX_1
Info: Nothing to build for EX_2
Info: Nothing to build for EX_3
Info: Nothing to build for EX_4
Info: Nothing to build for EX_5
19:51:31 **** Incremental Build of configuration Debug for project EX_6 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
..\main.c:12:6: warning: return type of 'main' is not 'int' [-Wmain]
 void main()
      ^~~~
gcc -o EX_6.exe main.o 
19:51:32 **** Rebuild of configuration Debug for project EX_7 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
..\main.c:12:6: warning: return type of 'main' is not 'int' [-Wmain]
 void main()
      ^~~~
..\main.c: In function 'main':
..\main.c:27:3: error: invalid operands to binary ^ (have 'float' and 'float')
  a^=b;
   ^~
..\main.c:28:3: error: invalid operands to binary ^ (have 'float' and 'float')
  b^=a;
   ^~
..\main.c:29:3: error: invalid operands to binary ^ (have 'float' and 'float')
  a^=b;
   ^~
..\main.c:14:14: warning: unused variable 'temp' [-Wunused-variable]
  float a, b, temp;
              ^~~~
Info: Nothing to build for EX_1
Info: Nothing to build for EX_2
Info: Nothing to build for EX_3
Info: Nothing to build for EX_4
Info: Nothing to build for EX_5
Info: Nothing to build for EX_6
19:51:51 **** Incremental Build of configuration Debug for project EX_7 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
..\main.c:12:6: warning: return type of 'main' is not 'int' [-Wmain]
 void main()
      ^~~~
..\main.c: In function 'main':
..\main.c:27:3: error: invalid operands to binary ^ (have 'float' and 'float')
  a^=b;
   ^~
..\main.c:28:3: error: invalid operands to binary ^ (have 'float' and 'float')
  b^=a;
   ^~
..\main.c:29:3: error: invalid operands to binary ^ (have 'float' and 'float')
  a^=b;
   ^~
Info: Nothing to build for EX_1
Info: Nothing to build for EX_2
Info: Nothing to build for EX_3
Info: Nothing to build for EX_4
Info: Nothing to build for EX_5
Info: Nothing to build for EX_6
19:52:05 **** Incremental Build of configuration Debug for project EX_7 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
..\main.c:12:6: warning: return type of 'main' is not 'int' [-Wmain]
 void main()
      ^~~~
..\main.c: In function 'main':
..\main.c:20:10: warning: format '%f' expects argument of type 'float *', but argument 2 has type 'int *' [-Wformat=]
  scanf("%f",&a);
          ^
..\main.c:25:10: warning: format '%f' expects argument of type 'float *', but argument 2 has type 'int *' [-Wformat=]
  scanf("%f",&b);
          ^
..\main.c:31:39: warning: format '%f' expects argument of type 'double', but argument 2 has type 'int' [-Wformat=]
  printf("After swapping, value of a= %f \nAfter swapping, value of b= %f",a,b );
                                       ^
..\main.c:31:72: warning: format '%f' expects argument of type 'double', but argument 3 has type 'int' [-Wformat=]
  printf("After swapping, value of a= %f \nAfter swapping, value of b= %f",a,b );
                                                                        ^
gcc -o EX_7.exe main.o 
Info: Nothing to build for EX_7
Info: Nothing to build for EX_1
Info: Nothing to build for EX_2
Info: Nothing to build for EX_3
Info: Nothing to build for EX_4
Info: Nothing to build for EX_5
Info: Nothing to build for EX_6
19:52:54 **** Incremental Build of configuration Debug for project EX_7 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
..\main.c:12:6: warning: return type of 'main' is not 'int' [-Wmain]
 void main()
      ^~~~
gcc -o EX_7.exe main.o 
Info: Nothing to build for EX_7
